--- a/deploy/index.html
+++ b/deploy/index.html
@@ -12,7 +12,7 @@
 <body>
     <section>
             <h1>Visit London</h1>
-            <img src="img/heroimg.jpg" alt="London skyline">
+            <img src="img/assets/heroimg" alt="London skyline">
     
     </section>
     
